@@ -10,6 +10,9 @@ New Features
 ---------------------
 (No changes)
 
+* SOLR-17006: Collection creation & adding replicas: User-defined properties are persisted to state.json and
+  applied to new replicas, available for use as property substitution in configuration files.  (Vincent Primault)
+
 Improvements
 ---------------------
 * SOLR-16924: RESTORECORE now sets the UpdateLog to ACTIVE state instead of requiring a separate
